// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Code /> should render Code with default properties 1`] = `
<View
  size="medium"
  style={
    Array [
      Object {
        "backgroundColor": "hsla(220, 30%, 96%, 1)",
        "borderRadius": 4,
        "paddingBottom": 2,
        "paddingLeft": 8,
        "paddingRight": 8,
        "paddingTop": 2,
      },
    ]
  }
>
  <Text
    color="surface.text.subtle.lowContrast"
    fontFamily="code"
    fontSize={75}
    style={
      Array [
        Object {
          "color": "hsla(216, 27%, 36%, 1)",
          "fontFamily": "Courier",
          "fontSize": 12,
          "fontStyle": "normal",
          "fontWeight": "400",
          "lineHeight": 24,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
          "textAlign": "left",
          "textDecorationLine": "none",
        },
      ]
    }
  >
    TEST_TOKEN
  </Text>
</View>
`;

exports[`<Code /> should render large Code with different types 1`] = `
Array [
  <View
    size="large"
    style={
      Array [
        Object {
          "backgroundColor": "hsla(220, 30%, 96%, 1)",
          "borderRadius": 4,
          "paddingBottom": 0,
          "paddingLeft": 4,
          "paddingRight": 4,
          "paddingTop": 0,
        },
      ]
    }
  >
    <Text
      color="surface.text.subtle.lowContrast"
      fontFamily="code"
      fontSize={100}
      style={
        Array [
          Object {
            "color": "hsla(216, 27%, 36%, 1)",
            "fontFamily": "Courier",
            "fontSize": 15,
            "fontStyle": "normal",
            "fontWeight": "400",
            "lineHeight": 24,
            "marginBottom": 0,
            "marginLeft": 0,
            "marginRight": 0,
            "marginTop": 0,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "textAlign": "left",
            "textDecorationLine": "none",
          },
        ]
      }
    >
      TEST
    </Text>
  </View>,
  <View
    size="large"
    style={
      Array [
        Object {
          "backgroundColor": "hsla(220, 30%, 96%, 1)",
          "borderRadius": 4,
          "paddingBottom": 0,
          "paddingLeft": 4,
          "paddingRight": 4,
          "paddingTop": 0,
        },
      ]
    }
  >
    <Text
      color="surface.text.muted.lowContrast"
      fontFamily="code"
      fontSize={100}
      style={
        Array [
          Object {
            "color": "hsla(216, 16%, 60%, 1)",
            "fontFamily": "Courier",
            "fontSize": 15,
            "fontStyle": "normal",
            "fontWeight": "400",
            "lineHeight": 24,
            "marginBottom": 0,
            "marginLeft": 0,
            "marginRight": 0,
            "marginTop": 0,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "textAlign": "left",
            "textDecorationLine": "none",
          },
        ]
      }
    >
      TEST
    </Text>
  </View>,
  <View
    size="large"
    style={
      Array [
        Object {
          "backgroundColor": "hsla(220, 30%, 96%, 1)",
          "borderRadius": 4,
          "paddingBottom": 0,
          "paddingLeft": 4,
          "paddingRight": 4,
          "paddingTop": 0,
        },
      ]
    }
  >
    <Text
      color="surface.text.normal.lowContrast"
      fontFamily="code"
      fontSize={100}
      style={
        Array [
          Object {
            "color": "hsla(217, 56%, 17%, 1)",
            "fontFamily": "Courier",
            "fontSize": 15,
            "fontStyle": "normal",
            "fontWeight": "400",
            "lineHeight": 24,
            "marginBottom": 0,
            "marginLeft": 0,
            "marginRight": 0,
            "marginTop": 0,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "textAlign": "left",
            "textDecorationLine": "none",
          },
        ]
      }
    >
      TEST
    </Text>
  </View>,
  <View
    size="large"
    style={
      Array [
        Object {
          "backgroundColor": "hsla(220, 30%, 96%, 1)",
          "borderRadius": 4,
          "paddingBottom": 0,
          "paddingLeft": 4,
          "paddingRight": 4,
          "paddingTop": 0,
        },
      ]
    }
  >
    <Text
      color="surface.text.placeholder.lowContrast"
      fontFamily="code"
      fontSize={100}
      style={
        Array [
          Object {
            "color": "hsla(214, 18%, 69%, 1)",
            "fontFamily": "Courier",
            "fontSize": 15,
            "fontStyle": "normal",
            "fontWeight": "400",
            "lineHeight": 24,
            "marginBottom": 0,
            "marginLeft": 0,
            "marginRight": 0,
            "marginTop": 0,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "textAlign": "left",
            "textDecorationLine": "none",
          },
        ]
      }
    >
      TEST
    </Text>
  </View>,
  <View
    size="large"
    style={
      Array [
        Object {
          "backgroundColor": "hsla(220, 30%, 96%, 1)",
          "borderRadius": 4,
          "paddingBottom": 0,
          "paddingLeft": 4,
          "paddingRight": 4,
          "paddingTop": 0,
        },
      ]
    }
  >
    <Text
      color="surface.text.subdued.lowContrast"
      fontFamily="code"
      fontSize={100}
      style={
        Array [
          Object {
            "color": "hsla(217, 18%, 45%, 1)",
            "fontFamily": "Courier",
            "fontSize": 15,
            "fontStyle": "normal",
            "fontWeight": "400",
            "lineHeight": 24,
            "marginBottom": 0,
            "marginLeft": 0,
            "marginRight": 0,
            "marginTop": 0,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "textAlign": "left",
            "textDecorationLine": "none",
          },
        ]
      }
    >
      TEST
    </Text>
  </View>,
]
`;

exports[`<Code /> should render medium Code with different types 1`] = `
Array [
  <View
    size="medium"
    style={
      Array [
        Object {
          "backgroundColor": "hsla(220, 30%, 96%, 1)",
          "borderRadius": 4,
          "paddingBottom": 2,
          "paddingLeft": 8,
          "paddingRight": 8,
          "paddingTop": 2,
        },
      ]
    }
  >
    <Text
      color="surface.text.subtle.lowContrast"
      fontFamily="code"
      fontSize={75}
      style={
        Array [
          Object {
            "color": "hsla(216, 27%, 36%, 1)",
            "fontFamily": "Courier",
            "fontSize": 12,
            "fontStyle": "normal",
            "fontWeight": "400",
            "lineHeight": 24,
            "marginBottom": 0,
            "marginLeft": 0,
            "marginRight": 0,
            "marginTop": 0,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "textAlign": "left",
            "textDecorationLine": "none",
          },
        ]
      }
    >
      TEST
    </Text>
  </View>,
  <View
    size="medium"
    style={
      Array [
        Object {
          "backgroundColor": "hsla(220, 30%, 96%, 1)",
          "borderRadius": 4,
          "paddingBottom": 2,
          "paddingLeft": 8,
          "paddingRight": 8,
          "paddingTop": 2,
        },
      ]
    }
  >
    <Text
      color="surface.text.muted.lowContrast"
      fontFamily="code"
      fontSize={75}
      style={
        Array [
          Object {
            "color": "hsla(216, 16%, 60%, 1)",
            "fontFamily": "Courier",
            "fontSize": 12,
            "fontStyle": "normal",
            "fontWeight": "400",
            "lineHeight": 24,
            "marginBottom": 0,
            "marginLeft": 0,
            "marginRight": 0,
            "marginTop": 0,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "textAlign": "left",
            "textDecorationLine": "none",
          },
        ]
      }
    >
      TEST
    </Text>
  </View>,
  <View
    size="medium"
    style={
      Array [
        Object {
          "backgroundColor": "hsla(220, 30%, 96%, 1)",
          "borderRadius": 4,
          "paddingBottom": 2,
          "paddingLeft": 8,
          "paddingRight": 8,
          "paddingTop": 2,
        },
      ]
    }
  >
    <Text
      color="surface.text.normal.lowContrast"
      fontFamily="code"
      fontSize={75}
      style={
        Array [
          Object {
            "color": "hsla(217, 56%, 17%, 1)",
            "fontFamily": "Courier",
            "fontSize": 12,
            "fontStyle": "normal",
            "fontWeight": "400",
            "lineHeight": 24,
            "marginBottom": 0,
            "marginLeft": 0,
            "marginRight": 0,
            "marginTop": 0,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "textAlign": "left",
            "textDecorationLine": "none",
          },
        ]
      }
    >
      TEST
    </Text>
  </View>,
  <View
    size="medium"
    style={
      Array [
        Object {
          "backgroundColor": "hsla(220, 30%, 96%, 1)",
          "borderRadius": 4,
          "paddingBottom": 2,
          "paddingLeft": 8,
          "paddingRight": 8,
          "paddingTop": 2,
        },
      ]
    }
  >
    <Text
      color="surface.text.placeholder.lowContrast"
      fontFamily="code"
      fontSize={75}
      style={
        Array [
          Object {
            "color": "hsla(214, 18%, 69%, 1)",
            "fontFamily": "Courier",
            "fontSize": 12,
            "fontStyle": "normal",
            "fontWeight": "400",
            "lineHeight": 24,
            "marginBottom": 0,
            "marginLeft": 0,
            "marginRight": 0,
            "marginTop": 0,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "textAlign": "left",
            "textDecorationLine": "none",
          },
        ]
      }
    >
      TEST
    </Text>
  </View>,
  <View
    size="medium"
    style={
      Array [
        Object {
          "backgroundColor": "hsla(220, 30%, 96%, 1)",
          "borderRadius": 4,
          "paddingBottom": 2,
          "paddingLeft": 8,
          "paddingRight": 8,
          "paddingTop": 2,
        },
      ]
    }
  >
    <Text
      color="surface.text.subdued.lowContrast"
      fontFamily="code"
      fontSize={75}
      style={
        Array [
          Object {
            "color": "hsla(217, 18%, 45%, 1)",
            "fontFamily": "Courier",
            "fontSize": 12,
            "fontStyle": "normal",
            "fontWeight": "400",
            "lineHeight": 24,
            "marginBottom": 0,
            "marginLeft": 0,
            "marginRight": 0,
            "marginTop": 0,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "textAlign": "left",
            "textDecorationLine": "none",
          },
        ]
      }
    >
      TEST
    </Text>
  </View>,
]
`;
